# rust-phishing

./: .env  Cargo.toml
src/: bot.rs  main.rs  models.rs
templates/: root.html.hbs  succes.html.hbs
